<resources>
    <!-- app名称-->
    <string name="app_name">华南农技通</string>
    <!--主tab名-->
    <string name="main_tab_name_function">应用</string>
    <string name="main_tab_name_question">在线交流</string>
    <string name="main_tab_name_quick">快速</string>
    <string name="main_tab_name_news">新闻</string>
    <string name="main_tab_name_me">我</string>

    <string name="tip_double_click_exit">再次点击退出华南农技通</string>

    <!-- 我-->
    <string name="actionbar_title_user_center">用户中心</string>
    <string name="actionbar_title_my_information">我的资料</string>

    <!-- 个人中心，登录相关-->
    <string name="unlogin">未登录，请先登录</string>
    <string name="unlogin_tip">您还未登录\r\n或网络延迟</string>
    <string name="my_information_unlogin_tips">未登录</string>
    <string name="tip_logout_success">注销成功</string>
    <string name="message">消息</string>
    <string name="setting">设置</string>

    <string name="register">用户注册</string>

    <string name="hint_username">输入账号/邮箱</string>
    <string name="hint_password">密码</string>
    <string name="login">登录</string>
    <string name="expert_login">登录</string>
    <string name="tip_please_input_username">请输入用户名</string>
    <string name="tip_illegal_email">请输入正确的email地址</string>
    <string name="tip_please_input_password">请输入密码</string>
    <string name="progress_login">正在登录…</string>
    <string name="tip_login_error_for_network">对不起,无法登录</string>
    <string name="tip_no_internet">当前没有可用的网络链接</string>
    <string name="progress_update">正在更新…</string>


    <string name="modified_my_information">修改个人资料</string>

    <string name="loading">加载中…</string>
    <string name="loading_no_more">已加载全部</string>

    <!-- Error View -->
    <string name="error_view_click_to_refresh">点击屏幕,重新加载</string>
    <string name="error_view_no_data">暂无内容</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="tip_network_error">没有可用的网络</string>

    <!-- 问答-->
    <string name="copy">复制</string>
    <string name="delete">删除</string>
    <string name="copy_success">复制成功</string>
    <string name="deleting">正在删除…</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_faile">删除失败</string>

    <!-- 人员信息-->
    <string name="user_info_realname">真实姓名</string>
    <string name="user_info_roletype">角色类型</string>
    <string name="user_info_phonenumber">电话号码</string>
    <string name="user_info_sex">性别</string>
    <string name="user_info_age">年龄</string>
    <string name="user_info_email">电子邮箱</string>
    <string name="user_info_address">所在地区</string>
    <string name="user_info_techtype">技术类型</string>
    <string name="user_info_description">个人描述</string>

    <string name="actionbar_title_mes">消息中心</string>

    <string name="password_setting">修改个人密码</string>
    <string name="myinformation_setting">修改个人资料</string>
    <string name="nowifi_loading_img">非WIFI网络下加载图片</string>
    <string name="mes_notice">消息通知</string>
    <string name="clean_cache">清理缓存</string>
    <string name="double_click_exit">双击退出</string>
    <string name="loading_more">自动加载更多</string>
    <string name="about">关于</string>
    <string name="exit">退出</string>

    <string name="actionbar_title_setting_notification">新消息提醒</string>
    <string name="notice_accept">接收新通知</string>
    <string name="notice_voice">声音</string>
    <string name="notice_vibration">震动</string>

    <string name="update">检查新版本</string>
    <string name="feedback">意见反馈</string>
    <string name="website">官网</string>
    <string name="knowmore">了解更多</string>
    <string name="copyright">Copyright © SCAU All rights reserved.</string>

    <string name="down_state">正在下载：%s</string>

    <!-- 反馈 -->
    <string name="str_feedback_submit">提交</string>
    <string name="str_feedback_et_hint">我们将为您不断改进</string>
    <string name="str_feedback_contact">您的手机号或邮箱：（选填）</string>
    <string name="str_feedback_contact_hint">方便我们给您答复</string>
    <string name="str_feedback_succeed">谢谢您的反馈，我们会仔细阅读并及时处理</string>
    <string name="str_feedback_tip">我们会仔细阅读您的反馈，并尽早给您回复。感谢您的理解与支持。</string>
    <string name="str_feedback_title">用户反馈</string>

    <string name="actionbar_title_tweetpub">发布问答</string>
    <string name="tweet_public">发布问答</string>
    <string name="tweet_content_hint">请输入你的问题</string>
    <string name="tweet_title_hint">请输入你的标题</string>
    <string name="tweet_type_hint">请选择类别</string>
    <string name="tweet_type_choose">选择类别</string>
    <string name="tweet_order_expert_hint">请选择询问的专家</string>
    <string name="tweet_expert_choose">选择专家</string>
    <string name="tweet_publishing">正在发布你的问题…</string>
    <string name="tweet_publish_success">问题发布成功</string>
    <string name="tweet_publish_faile">发布问题失败</string>
    <string name="draft_tweet_message">是否保存为草稿?</string>
    <string name="clearwords">是否清空内容?</string>
    <string name="choose_picture">选择图片</string>
    <string name="tip_content_empty">内容不能为空</string>
    <string name="tip_content_too_long">内容太长</string>
    <string name="actionbar_tweet_detail">问答详情</string>

    <string name="fa_thumbs_o_up">\uf087</string>

    <!-- 应用模块-->
    <string name="village_service_apply">服务申请</string>
    <string name="village_service_proof">上传佐证</string>
    <string name="village_service_performance">绩效管理</string>
    <string name="agriculture_knowledge_base">知识库</string>
    <string name="area_choose">选择地区</string>

    <string name="village_service_apply_list">服务申请</string>
    <string name="village_service_apply_add">添加服务申请</string>

    <string name="actionbar_title_detail">详情</string>
    <string name="village_service_detail">服务详情</string>

    <string name="actionbar_title_question_tag">%s相关</string>
    <string name="comment_count">评论(%s)</string>
    <string name="comment_empty">暂无评论</string>
    <string name="answer_count">回复(%s)</string>
    <string name="post_answer">回复</string>
    <string name="comment_reply_count">---共有%s条回复---</string>
    <string name="comment_refer_author">引用来自%s的评论</string>
    <string name="tip_comment_content_empty">评论内容不能为空</string>

    <!-- notification messages -->
    <string name="comment_blog">发布评论</string>
    <string name="comment_publishing">正在发布你的评论…</string>
    <string name="comment_publish_success">评论成功</string>
    <string name="comment_publish_faile">评论失败</string>

    <string name="progress_submit">正在提交…</string>

    <string name="manualcategory_actionbar_title">选择类别</string>
    <string name="manuallist_actionbar_title">知识库列表</string>
    <string name="manualdetail_actionbar_title">知识库详情</string>

    <string name="village_function">服务管理</string>
    <string name="village_service_verify">服务申请审批</string>


    <string name="village_service_proof_list">增加佐证</string>
    <string name="village_service_proof_choose">选择佐证事件</string>
    <string name="village_service_proof_resource">佐证材料列表</string>
    <string name="village_service_proof_resource_add">上传佐证材料</string>
    <string name="village_service_summary">服务总结</string>

    <string name="actionbar_title_news">资讯详情</string>

    <string name="actionbar_title_search">搜索</string>
    <string name="actionbar_title_search_user">搜索用户</string>
    <string name="actionbar_title_choose_village_service_reason">选择服务事由</string>
    <string name="actionbar_title_choose_village_service_type">选择服务类型</string>
    <string name="actionbar_title_choose_proof_resource_description">选择佐证材料类型</string>

    <string name="village_service_statistic_detail">服务统计详情</string>

    <string name="actionbar_expertbase_type">选择专家类别</string>
    <string name="actionbar_expertbase_list">专家库列表</string>
    <string name="actionbar_expertbase_detail">专家详情</string>

    <string name="service_performance_function">绩效管理</string>

    <string name="performance_add">添加绩效</string>
    <string name="actionbar_performance_list">绩效列表</string>
    <string name="actionbar_choose_performance_type">选择绩效类型</string>
    <string name="performance_detail">绩效详情</string>

    <string name="performance_verify">绩效申报审批</string>

    <string name="performance_month_statistics">部门绩效统计</string>
    <string name="performance_statistics">部门绩效统计</string>

    <string name="myperformance_month_statistics">个人绩效统计</string>
    <string name="myperformance_statistics">个人绩效统计</string>

    <string name="service_month_statistics">部门服务统计</string>
    <string name="service_statistics">部门服务统计</string>

    <string name="myservice_month_statistics">个人服务统计</string>
    <string name="myservice_statistics">个人服务统计</string>

    <string name="you_have_news_messages">你有%s条最新消息</string>
    <string name="atme_count">\@我(%s) </string>
    <string name="review_count">评论(%s) </string>

    <string name="actionbar_wittweet">发布问答前请先搜索</string>

    <string name="actionbar_choose_simple_text">选择</string>

    <string name="actionbar_search_manual">搜索知识库</string>
    <string name="actionbar_search_expert">搜索专家库</string>



</resources>
