<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/windows_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/et_tweet_type"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:editable="false"
            android:hint="@string/tweet_type_hint"/>
        <ImageView
            android:id="@+id/btn_tweet_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_quickoption_selector" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/et_tweet_choose_expert"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:editable="false"
            android:hint="@string/tweet_order_expert_hint"/>
        <ImageView
            android:id="@+id/btn_tweet_choose_expert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_quickoption_selector" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_tweet_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/tweet_title_hint"/>

    <EditText
        android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top|left"
        android:hint="@string/tweet_content_hint"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edittext"
        android:padding="@dimen/space_12"
        android:textColor="?android:editTextColor"
        android:textSize="18sp" />

    <RelativeLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:padding="@dimen/space_8" >

        <!-- 图片缩略图-->
        <RelativeLayout
            android:id="@+id/rl_img"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:visibility="gone" >

            <ImageView
                android:id="@+id/iv_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/light_gray"
                android:clickable="true"
                android:scaleType="centerCrop" />

            <ImageView
                android:id="@+id/iv_clear_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/ib_clear_image_selector" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/rl_img"
            android:layout_alignParentRight="true"
            android:background="@drawable/compose_clear_selector"
            android:clickable="true"
            tools:text="120"
            android:gravity="center_vertical"
            android:textColor="?attr/textColor"
            android:textSize="@dimen/text_size_14" />
    </RelativeLayout>

    <View
        style="@style/h_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1" >

        <ImageButton
            android:id="@+id/ib_picture"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:padding="@dimen/space_8"
            android:src="@drawable/compose_toolbar_picture_selector" />

    </LinearLayout>

</LinearLayout>